fix: (LottoTest) 로또 생성 시 정렬 상태 테스트 제거